--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                <div class="w-2/4  ">
                   <div class="flex bg-slate-200  px-2 py-2  w-1/5 h-1/5  rounded-lg">
                      <img class="" src="image/coin.png" alt="">
-                     <a class="ml-2">0 BDT</a>
+                     <a class="ml-2"> <samp id="">0</samp> BDT</a>
                   </div>
                   <h1 class="font-bold mt-2">Donate for Flood at Noakhali, Bangladesh</h1>
                   <p class="py-6 ">
@@ -99,7 +99,7 @@
 
                      <input type="text" placeholder="Write Donation Amount" class="mt-2 w-full input" />
                   </div>
-                  <button class=" mt-3 bg-Donate-primary text-black btn btn-primary w-full">Get Started</button>
+                  <button class=" mt-3 bg-Donate-primary text-black btn btn-primary w-full">Donate Now</button>
 
                </div>
             </div>
@@ -113,7 +113,7 @@
                      <img class="" src="image/coin.png" alt="">
                      <a class="ml-3">0 BDT</a>
                   </div>
-                  <h1 class="font-bold mt-2">Donate for Flood at Noakhali, Bangladesh</h1>
+                  <h1 class="font-bold mt-2">Donate for Flood Relief in Feni,Bangladesh</h1>
                   <p class="py-6 ">
                      The recent floods in Noakhali have caused significant damage to homes infrastructure. Your donation
                      will help provide essential supplies and to those affected by this disaster. Every contribution,
@@ -124,7 +124,7 @@
 
                      <input type="text" placeholder="Write Donation Amount" class="mt-2 w-full input" />
                   </div>
-                  <button class=" mt-3 bg-Donate-primary text-black btn btn-primary w-full">Get Started</button>
+                  <button class=" mt-3 bg-Donate-primary text-black btn btn-primary w-full">Donate Now</button>
 
                </div>
             </div>
@@ -138,7 +138,7 @@
                      <img src="image/coin.png" alt="">
                      <a class="ml-3">0 BDT</a>
                   </div>
-                  <h1 class="font-bold mt-2">Donate for Flood at Noakhali, Bangladesh</h1>
+                  <h1 class="font-bold mt-2">Aid for Injured in the Quota Movement</h1>
                   <p class="py-6 ">
                      The recent floods in Noakhali have caused significant damage to homes infrastructure. Your donation
                      will help provide essential supplies and to those affected by this disaster. Every contribution,
@@ -149,7 +149,7 @@
 
                      <input type="text" placeholder="Write Donation Amount" class="mt-2 w-full input" />
                   </div>
-                  <button class=" mt-3 bg-Donate-primary text-black btn btn-primary w-full">Get Started</button>
+                  <button class=" mt-3 bg-Donate-primary text-black btn btn-primary w-full">Donate Now</button>
 
                </div>
             </div>
