adding the java script files

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
    </style>
    <!-- tailwind color  -->
    <style type="text/tailwindcss">
-      @theme {
+      @theme{
         --color-clifford: #da373d;
         --color-Donate-primary : #B4F461;
         --color-bike-primary-bg : rgba(231, 111, 81, 0.1)
@@ -60,7 +60,7 @@
             </div>
             <div class="navbar-end ">
                <img src="image/coin.png" alt="">
-               <a class="ml-3">5500 BDT</a>
+               <a class="ml-3"> <span class="account-balance">5500</span> BDT</a>
             </div>
          </div>
       </nav>
@@ -68,7 +68,7 @@
       <!-- Donation and History -->
       <div class=" my-9 flex justify-center space-x-4">
          <div>
-            <button class="btn bg-Donate-primary">Donation</button>
+            <button class="btn bg-Donate-primary"> Donation </button>
          </div>
          <div>
             <button class="btn">History</button>
@@ -86,7 +86,7 @@
                <div class="w-2/4  ">
                   <div class="flex bg-slate-200  px-2 py-2  w-1/5 h-1/5  rounded-lg">
                      <img class="" src="image/coin.png" alt="">
-                     <a class="ml-2"> <samp id="">0</samp> BDT</a>
+                     <a class="ml-2"> <span id="n-tk"> 0 </span> BDT</a>
                   </div>
                   <h1 class="font-bold mt-2">Donate for Flood at Noakhali, Bangladesh</h1>
                   <p class="py-6 ">
