--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
    <!--  -->
-   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  </head>
    <style>
       .font-lexend {
          font-family: "Lexend", sans-serif;
@@ -60,7 +61,7 @@
             </div>
             <div class="navbar-end ">
                <img src="image/coin.png" alt="">
-               <a class="ml-3"> <span class="account-balance">5500</span> BDT</a>
+               <a class="ml-3"> <span id="account-balance">5500</span> BDT</a>
             </div>
          </div>
       </nav>
@@ -97,9 +98,9 @@
                   </p>
                   <div class="">
 
-                     <input type="text" placeholder="Write Donation Amount" class="mt-2 w-full input" />
+                     <input type="text" id="input-add-money" placeholder="Write Donation Amount" class="mt-2 w-full input" />
                   </div>
-                  <button class=" mt-3 bg-Donate-primary text-black btn btn-primary w-full">Donate Now</button>
+                  <button id="btn-donate-money" class=" mt-3 bg-Donate-primary text-black btn btn-primary w-full">Donate Now</button>
 
                </div>
             </div>
@@ -157,6 +158,9 @@
       </div>
 
    </main>
+   <!-- src links to connect he amount of the DOM -->
+   <script src="js-folder/utilities.js"></script>
+   <script src="js-folder/Donation.js"></script>
    <!-- footer section -->
    <footer>
 
