--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                <div class="w-2/4 ">
                   <div class="flex bg-slate-200 px-2 py-2 w-1/5 h-1/5  rounded-lg ">
                      <img class="" src="image/coin.png" alt="">
-                     <a class="ml-3">0 BDT</a>
+                    <a class="ml-2"> <span id="f-tk"> 0 </span> BDT</a>
                   </div>
                   <h1 class="font-bold mt-2">Donate for Flood Relief in Feni,Bangladesh</h1>
                   <p class="py-6 ">
@@ -123,9 +123,9 @@
                   </p>
                   <div class="">
 
-                     <input type="text" placeholder="Write Donation Amount" class="mt-2 w-full input" />
+                     <input id="input-Donation-money" type="text" placeholder="Write Donation Amount" class="mt-2 w-full input" />
                   </div>
-                  <button class=" mt-3 bg-Donate-primary text-black btn btn-primary w-full">Donate Now</button>
+                  <button id="btn-feni-donate" class=" mt-3 bg-Donate-primary text-black btn btn-primary w-full">Donate Now</button>
 
                </div>
             </div>
