--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <button class="btn bg-Donate-primary"> Donation </button>
          </div>
          <div>
-            <button class="btn">History</button>
+            <button id="show-transaction-history" class="btn">History</button>
          </div>
       </div>
 
@@ -137,7 +137,7 @@
                <div class="w-2/4 ">
                   <div class="flex bg-slate-200 w-1/5 h-1/5 px-2 py-2 rounded-lg ">
                      <img src="image/coin.png" alt="">
-                     <a class="ml-3">0 BDT</a>
+                   <a class="ml-2"> <span id="q-tk"> 0 </span> BDT</a>
                   </div>
                   <h1 class="font-bold mt-2">Aid for Injured in the Quota Movement</h1>
                   <p class="py-6 ">
@@ -148,15 +148,14 @@
                   </p>
                   <div class="">
 
-                     <input type="text" placeholder="Write Donation Amount" class="mt-2 w-full input" />
+                     <input id="input-contribute-money" type="text" placeholder="Write Donation Amount" class="mt-2 w-full input" />
                   </div>
-                  <button class=" mt-3 bg-Donate-primary text-black btn btn-primary w-full">Donate Now</button>
+                  <button id="btn-quota-donate"  class=" mt-3 bg-Donate-primary text-black btn btn-primary w-full">Donate Now</button>
 
                </div>
             </div>
          </div>
-      </div>
-
+          
    </main>
    <!-- src links to connect he amount of the DOM -->
    <script src="js-folder/utilities.js"></script>
