making the front page responsive

--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
          <!-- Noakhali -->
          <div class="hero  h-full bg-base-200 rounded-xl">
             <div class="hero-content flex-col lg:flex-row lg:space-x-8 space-y-4 lg:space-y-0">
-               <img class="w-full max-w-sm rounded-lg shadow-2xl" src="image/noakhali.png" class="w-auto h-96 rounded-lg shadow-2xl" />
-               <div class="w-2/4  ">
-                  <div class="flex bg-slate-200  px-2 py-2  w-1/5 h-1/5  rounded-lg">
-                     <img class="" src="image/coin.png" alt="">
+               <img class="w-full max-w-sm rounded-lg shadow-2xl" src="image/noakhali.png"  />
+               <div class="w-full lg:w-1/2">
+                  <div class="flex items-center bg-slate-200 px-4 py-2 rounded-lg w-fit">
+                     <img  src="image/coin.png" alt="">
                      <a class="ml-2"> <span id="n-tk"> 0 </span> BDT</a>
                   </div>
                   <h1 class="font-bold mt-2">Donate for Flood at Noakhali, Bangladesh</h1>
@@ -106,12 +106,12 @@
             </div>
          </div>
          <!-- Feni -->
-         <div class="hero max-w-full h-full bg-base-200 my-9 rounded-xl ">
-            <div class="hero-content flex-col space-x-8 lg:flex-row">
-               <img class="w-[400px]" src="image/feni.png" class="w-auto h-96 rounded-lg shadow-2xl" />
-               <div class="w-2/4 ">
-                  <div class="flex bg-slate-200 px-2 py-2 w-1/5 h-1/5  rounded-lg ">
-                     <img class="" src="image/coin.png" alt="">
+         <div class="hero  h-full bg-base-200 rounded-xl">
+            <div class="hero-content flex-col lg:flex-row lg:space-x-8 space-y-4 lg:space-y-0">
+               <img class="w-full max-w-sm rounded-lg shadow-2xl" src="image/feni.png" />
+               <div class="w-full lg:w-1/2">
+                  <div class="flex items-center bg-slate-200 px-4 py-2 rounded-lg w-fit">
+                     <img src="image/coin.png" alt="">
                     <a class="ml-2"> <span id="f-tk"> 0 </span> BDT</a>
                   </div>
                   <h1 class="font-bold mt-2">Donate for Flood Relief in Feni,Bangladesh</h1>
@@ -131,11 +131,11 @@
             </div>
          </div>
          <!-- Quota -->
-         <div class="hero max-w-full h-full bg-base-200   rounded-xl  ">
-            <div class="hero-content  flex-col space-x-8 lg:flex-row">
-               <img class="w-[400px]" src="image/quota-protest.png" class="w-auto h-96 rounded-lg shadow-2xl" />
-               <div class="w-2/4 ">
-                  <div class="flex bg-slate-200 w-1/5 h-1/5 px-2 py-2 rounded-lg ">
+         <div class="hero  h-full bg-base-200 rounded-xl ">
+            <div class="hero-content flex-col lg:flex-row lg:space-x-8 space-y-4 lg:space-y-0">
+               <img class="w-full max-w-sm rounded-lg shadow-2xl" src="image/quota-protest.png"  />
+               <div class="w-full lg:w-1/2">
+                  <div class="flex items-center bg-slate-200 px-4 py-2 rounded-lg w-fit">
                      <img src="image/coin.png" alt="">
                    <a class="ml-2"> <span id="q-tk"> 0 </span> BDT</a>
                   </div>
@@ -158,9 +158,9 @@
       
       </div>
       <!-- transaction history  -->
-        <div id="transaction-section" class="hidden">
+        <div id="transaction-section" class="hidden px-4 md:px-10 lg:px-20 py-10">
                <h2 class="text-3xl text-center">Transaction History</h2>
-               <div id="transaction-container">
+               <div id="transaction-container"  class="space-y-2 mt-4">
                   
                </div>
              </div>
